manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-url
spec:
  selector:
    app: go-url
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
